--- a/welcome-style.css
+++ b/welcome-style.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'Silkscreen';
-  src: url('assets/fonts/Silkscreen-Regular.ttf') format('truetype');
+  src: url('./assets/fonts/Silkscreen-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
