--- a/countdown-style.css
+++ b/countdown-style.css
@@ -16,16 +16,32 @@
 }
 
 @font-face {
-  font-family: 'Doto';
-  src: url('./assets/fonts/Doto-Regular.ttf') format('truetype');
-  font-weight: var();
-  font-style: var();
-}
-@font-face {
   font-family: 'Yarndings12-Regular';
   src: url('./assets/fonts/Yarndings12-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+}
+@font-face {
+  font-family: 'Jersey10-Regular';
+  src: url('./assets/fonts/Jersey10-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Silkscreen-Bold';
+  src: url('./assets/fonts/Silkscreen-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Silkscreen-Regular';
+  src: url('./assets/fonts/Silkscreen-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Doto-Regular';
+  src: url('./assets/fonts/Doto-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Doto-Medium';
+  src: url('./assets/fonts/Doto-Medium.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Doto-Bold';
+  src: url('./assets/fonts/Doto-Bold.ttf') format('truetype');
 }
 
 /* 2) Dim overlay atop the night sky while counting down */
