--- a/screen-style.css
+++ b/screen-style.css
@@ -15,16 +15,32 @@ body.overlay {
 /* added style from previous .css's */
 
 @font-face {
-  font-family: 'Silkscreen';
+  font-family: 'Yarndings12-Regular';
+  src: url('./assets/fonts/Yarndings12-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Jersey10-Regular';
+  src: url('./assets/fonts/Jersey10-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Silkscreen-Bold';
+  src: url('./assets/fonts/Silkscreen-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Silkscreen-Regular';
   src: url('./assets/fonts/Silkscreen-Regular.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'Doto';
-  src: url('./assets/fonts/Doto-VariableFont_ROND,wght.ttf') format('truetype');
+  font-family: 'Doto-Regular';
+  src: url('./assets/fonts/Doto-Regular.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'Yarndings 12';
-  src: url('./assets/fonts/Yarndings12.ttf') format('truetype');
+  font-family: 'Doto-Medium';
+  src: url('./assets/fonts/Doto-Medium.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Doto-Bold';
+  src: url('./assets/fonts/Doto-Bold.ttf') format('truetype');
 }
 
 html, body {
