--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ body.overlay::before {
     font-family: 'Silkscreen', sans-serif;
     font-size: calc(1.3rem + 0.5vw);
     padding: 0.9rem 2.5rem;
-    background: transparent;
+    background:  rgba(107, 216, 158, 0.075);
     color: rgb(107, 216, 158);
     border: 2px solid rgb(107, 216, 158);
     border-radius: 0;
@@ -191,7 +191,7 @@ body.overlay::before {
     box-shadow: 0 0 10px 2px rgba(107, 216, 158, 0.3);
     cursor: pointer;
     transition: all 0.3s ease;
-    margin-bottom: calc(10rem + 1vw);
+    margin-bottom: calc(1rem + 1vw);
 }
 .start-btn:hover {
     width: calc(21.2rem + 8vw);
@@ -340,48 +340,43 @@ body.overlay::before {
 #gameOverTitle {
   pointer-events: none;
   text-align: center;
-  margin-bottom: 6rem;
-  margin-top: 8rem;
+  margin-bottom: 2rem;
+  margin-top: 4rem;
   animation: pulse 1s infinite ease-in-out;
 }
 #gameOverTitle h1 {
+  pointer-events: none;
   margin: 0;
   font-family: 'Silkscreen', sans-serif;
-  font-size: clamp(3rem, 6vw, 8rem);
+  font-size: clamp(5rem, 6vw, 8rem);
   color: rgb(255, 49, 98);
   letter-spacing: clamp(8px, 1.5vw, 16px);
 }
 #gameOverTitle p{
   pointer-events: none;
-  font-family: 'Silkscreen', sans-serif;
   font-size: clamp(0.8rem, 1.2vw, 1.4rem);
-  font-weight: 500;
   letter-spacing: clamp(1px, 1vw, 4px);
   color: rgb(255, 255, 255);
   margin: 0.2rem 0 2rem 0;
 }
 
-
 #gameStats {
   pointer-events: none;
-  text-align: left;
+  text-align: center;
   color: rgba(255, 255, 255, 1);
   line-height: 2rem;
   margin-bottom: 4rem;
 }
 #gameStats p {
   pointer-events: none;
-  font-family: 'Doto', sans-serif;
-  font-weight: light;
+  font-family: 'Doto-Regular', sans-serif;
   font-size: clamp(2rem, 2.4vw, 3.2rem);
 }
 #gameStats span {
   pointer-events: none;
-  font-family: 'Doto', sans-serif;
-  font-weight: bold;
-  font-size: clamp(2rem, 2.4vw, 3.2rem);
+  font-family: 'Doto-Bold';
+  font-size: clamp(3rem, 2.4vw, 3.2rem);
   color: rgb(107, 216, 158);
-  font-weight: 700;
 }
 
 /* Fade‐in/fade‐out transitions for full page */
